--- a/posts/2020-05-01.md
+++ b/posts/2020-05-01.md
@@ -4,11 +4,13 @@ Those of you familiar with dataflow processing are likely also familiar with the
 
 That's a great worry! In many cases tools like [differential dataflow](https://github.com/TimelyDataflow/differential-dataflow) work hard to maintain a compact representation for your data. At the same time, it is also reasonable that you might just point an unbounded amount of data at such a system, and then no amount of clever compaction is going to save you, probably.
 
-Let's take an example: you have a stream of `(key, val, time)` records flowing in, and you'd like to retain the most recent `val` for each `key`, where "recent" is determined by `time`. There is no a priori bound on the number of updates you might see, but let's imagine that there are only so many distinct `key`s you might see, and so it is reasonable to want this maintained and readily available by random access. Like if you used a hash map, or something similar.
+Let's take an example: you have a stream of `(key, val, time)` records flowing in, and you'd like to retain the most recent `val` for each `key`, where "recent" is determined by `time`. There is no a priori bound on the number of updates you might see, but let's imagine that there are only so many distinct `key`s you might see, and so it is reasonable to want this maintained and readily available by random access. As if you had used a hash map, or something similar.
 
 We [recently discussed this problem](https://github.com/frankmcsherry/blog/blob/master/posts/2020-03-26.md) and ended up writing a custom differential dataflow operator. That was a bit of work, and probably not the most maintainable code. It is certainly not a great solution if you would like to change the logic a little bit, perhaps maintaining the three most recent values, for example.
 
 What if we could do all of this logic *using existing dataflow operators*, rather than writing new ones from scratch? That's what we'll get up to today.
+
+This post is cross-posted from [Materialize, Inc.](https://materialize.io/managing-memory-with-differential-dataflow/)
 
 ### An unboundedly growing baseline
 
@@ -26,6 +28,7 @@ We'll start with the dataflow fragment, which is just going to mirror the logic 
 
         use differential_dataflow::operators::reduce::Reduce;
 
+        // Determine the most recent inputs for each key.
         input
             .to_collection(scope);
             .reduce(|_key, input, output| {
@@ -37,7 +40,7 @@ We'll start with the dataflow fragment, which is just going to mirror the logic 
     });
 ```
 
-This dataflow doesn't do very much with its output, but we'll be able to monitor `probe` to determine how long it takes to sort out its output.
+For those of you not familiar with differential dataflow, the computation takes the stream `input` and re-interprets it as ongoing changes to an accumulated collection. Records in that collection should have a `(key, val)` structure, as the `reduce` method is applied to them and retains for each `key` the largest `val` (they are sorted in its `input`, and let's imagine the value starts with the timestamp). This dataflow doesn't do anything with its output, but we'll be able to monitor `probe` to determine how long it takes to determine that output. This should give us a sense for if and to what degree it struggles.
 
 I also wrote the following fairly simple open-loop harness that is meant to show us slowing down, if we do so. It takes as input (from the command line) a number of nanoseconds to wait between each input record, and as often as it can it introduces as many records as it is permitted to do.
 
@@ -102,9 +105,11 @@ mcsherry@Echidnatron compaction % cargo run -- 1000000
 mcsherry@Echidnatron compaction %
 ```
 
-You can see here that pretty soon we are a second behind, despite printing reports each second. Pretty soon we are what I judge to be hopelessly behind.
+You can see here that almost immediately our `max latency` metric is a second behind, despite printing reports each second. Pretty soon we are what I judge to be hopelessly behind.
 
-This is a debug build, but the same thing happens if we use a release build and increase the offered load (decreasing the `delay_ns` argument) by 10x:
+This makes sense, because we are just adding more and more data to our input. Each record we add prompts a re-computation of the maximum, and with 1,000 of these each second we quickly have thousands of records, corresponding to millions of records to re-consider each second. Now, *we* know that we only have to track the most recent report, but differential dataflow is carefully prepared for you to make any modification to the input at all, including the deletion of all but one record (for each of the input records).
+
+The above is a debug build, but the same thing happens if we use a release build and increase the offered load (decreasing the `delay_ns` argument) by 10x:
 ```
 mcsherry@Echidnatron compaction % cargo run --release -- 100000
     Finished release [optimized] target(s) in 0.04s
@@ -119,25 +124,55 @@ mcsherry@Echidnatron compaction % cargo run --release -- 100000
 mcsherry@Echidnatron compaction %
 ```
 
-### An explanation and a hack-y fix
+This case is actually worse by a factor of 100x, because we have 10x as many updates each second, and have 10x the number of accumulated records that we need to reconsider for each of those updates.
+
+### An explanation
 
 The problem of course is that as our computation proceeds we have strictly more data. We only have one key in play, but the number of records associated with that key increases unboundedly. Each time we need to refresh our understanding, which happens for each input update, we have to reconsider all prior updates.
 
-You might say this is a bad way to update a maximum of an append-only stream, and you are totally right, and one way out of this pickle would be to start to write custom dataflow operators. We really don't want to do that here (they are subtle, and the existing ones are well engineered). However, let's talk through what such an operator does to try and see where the gap is.
+You might say this is a bad way to update a maximum of an append-only stream, and you are totally right, and one way out of this pickle would be to start to write custom dataflow operators. We really don't want to do that here (they are subtle, and the existing ones are well engineered). However, let's talk through what such an operator does to try and see where the gap is between what differential dataflow does and what we might want it to do.
 
-If we were presented with an append-only stream, and we wanted to maintain the maximum value, or perhaps some values by the maximum of one of the values, we could write a pretty simple state machine. Each key has some associated values, and when presented with a new value we compare the old and the new values. If there is an improvement, we keep the new value and discard the old. If there is no improvement we keep the old value and discard the new.
+If we were presented with an append-only stream and we wanted to maintain the maximum value, we could write a pretty simple state machine for each key. Each key has an associated value, and when presented with a new value we compare the old and the new values. If there is an improvement, we keep the new value and discard the old. If there is no improvement we keep the old value and discard the new.
 
 The common theme here is that when processing input values we are able to effectively discard input values that were no longer interesting to us.
 
----
+### A warm-up hack we could use
 
-**HACK**: If we just needed to fix the latency stability and memory footprint *now*, and weren't embarassed by silly looking solutions, we could just update our input stream to retract input elements that are not evident in the output.
+If we just needed to fix the latency stability and memory footprint *now*, and weren't embarassed by silly looking solutions, we could just manually update our input stream to retract each input element once we see something in the output that is greater than it is.
 
----
+Here is a fragment that determines the elements we might feel comfortable retracting.
 
-Ok, that hack has a bunch of issues, mostly that there are races all over the place as we await certainty that some input hasn't made it through the output yet. Also, if you are in "append-only" land you might not be able to retract things; you could instead create another input `retractions` to which you write things to remove.
+```rust
+    // Create input and probe handles to use throughput the program.
+    let mut input = differential_dataflow::input::InputSession::new();
+    let mut probe = timely::dataflow::ProbeHandle::new();
 
-But this is not why we are here. Let's do this idea a more interesting way.
+    // Build a dataflow to present most recent values for keys.
+    worker.dataflow(|scope| {
+
+        use differential_dataflow::operators::reduce::Reduce;
+
+        // Give input its own name to re-use later.
+        let input = input.to_collection(scope);
+
+        // Determine the most recent inputs for each key.
+        let results = input
+            .reduce(|_key, input, output| {
+                // Emit the last value with a count of 1
+                let max = input.last().unwrap();
+                output.push((*max.0, 1));
+            })
+            .probe_with(&mut probe);
+
+        // Retract any input not present in the ouput.
+        let retractions = input.concat(&results.negate());
+    });
+
+```
+
+With `retractions` defined, you could take the initiative to export it from your computation, pull it back in to your computation as a source, and then subtract it from `input`. That doesn't happen automatically or anything.
+
+That sounds a bit complicated. Not unbearable, but complicated. Let's do it using differential dataflow itself, instead!
 
 ### Self-compacting differential dataflows
 
@@ -145,11 +180,9 @@ We've described an intuition: that input records that do not survive the `reduce
 
 Differential dataflow has [a `Variable` type](https://docs.rs/differential-dataflow/0.11.0/differential_dataflow/operators/iterate/struct.Variable.html) that is used to construct a reference to a collection before the collection's contents are actually defined. Once you've figured out what the collection should be, possibly it terms of itself, you can `set` that definition.
 
-The most natural interpretation is as a variable in an iterative computation, where the next iteration of collection may depend on the output of some computation that depended on its prior iteration. However, these things are more general than that. We don't have to use them in iterative contexts; we can use them anywhere we want to provide feedback from one part of the dataflow graph back to a prior part.
+The `Variable` is most often used in an iterative computation, where the next iterate of collection may depend on the output of some computation that depended on its prior iterate. However, these things are more general than that. We don't have to use a `Variable` in an iterative context; we can use them anywhere we want to provide feedback from one part of the dataflow graph back to a prior part.
 
-To avoid predictable problems with cyclic definitions, to create a `Variable` you need to specify a "delay", some amount that should be applied to each timestamp to ensure that everything remains well defined. Practically speaking, this delay ensures that a dataflow does not become blocked on a cyclic dependency (differential dataflow operators take action only once they are certain they have all of their inputs for a given timestamp). We will get in to some more details about this delay, but it needs to be strictly positive.
-
-Let's just write some code down, rather than speaking all abstractly. We'll create a `Variable` and name it `retractions`, just like we sort of sketched a few paragraphs ago, before things got all weird.
+It is difficult to speak too abstractly about `Variable`, so instead let's just write some code down and work through the details. We'll create a `Variable` and name it `retractions`, just like we sort of sketched a few paragraphs ago. The intent is that it should contain records from `input` that we want to remove.
 
 ```rust
     // Build a dataflow to present most recent values for keys.
@@ -159,10 +192,11 @@ Let's just write some code down, rather than speaking all abstractly. We'll crea
         use differential_dataflow::operators::iterate::Variable;
 
         // Prepare some delayed feedback from the output.
+        // Explanation of `delay` deferred for the moment.
         let delay = Duration::from_nanos(delay_ns);
         let retractions = Variable::new(scope, delay);
 
-        // Give this its own name to re-use later.
+        // Give input its own name to re-use later.
         let input = input.to_collection(scope);
 
         // Determine the results minus any retractions.
@@ -180,29 +214,21 @@ Let's just write some code down, rather than speaking all abstractly. We'll crea
     });
 ```
 
-The main changes to notice here relate to `retractions` and how we use it. Whatever is in it, we subtract it out from the input before our `reduce` operator; that seems to line up with its name. Also, at the end of the dataflow we `set` it to be the input minus whatever resulted from the `reduce`; that also seems to line up with what we said we should do.
+The main changes to notice is that `retractions` is now a `Variable`, rather than a `Collection`. We construct it with some `delay` whose explanation will need to be briefly deferred. We subtract whatever `retractions` is from the input, and then later call `set()` with an argument that appears to be what we defined retractions to be in the code example just up above.
 
-All changes that flow in to the `set` location of `retractions` will be delayed by `delay` and then re-surfaced wherever `retractions` is used.
-
-### Take a breath
-
-Think of flowers. Springtime. Things that make you happy...
+Superficially, this seems like it might check out. Even while being 100% unclear about what actually happens. Informally, what happens is that we've turned our `Duration` streaming timestamps into something that does double duty as a loop variable.
 
 ### Understanding variables
 
-I personally understand variables by thinking of differential's `Collection` type as things that map times to piles of data. In acyclic dataflows, each collection at each time is defined by collections prior to it in the dataflow, each at times prior to the time in question. The precise definition of the collection's contents depends on the shape of the dataflow, and what sort of operators got used along the way.
+A `Variable` lets you feed back a collection's contents at some `time` to the top of the dataflow at a strictly later `time + delay`.
 
-The `Variable` type allows us to define collections at each time by *arbitrary* other collections in the dataflow, while still being restricted to times prior to the time in question.
+I personally understand `Variable` by thinking of differential's `Collection` type as a map from times to piles of data. In acyclic dataflows, each collection at each time is defined by collections **strictly before it in the dataflow**, each at times **less or equal to the time in question**. The precise definition of the collection's contents depends on the shape of the dataflow, and what sort of operators got used along the way.
+
+The `Variable` type allows us to define collections at each time by ***arbitrary*** other collections in the dataflow, while being restricted to times **strictly less than** the time in question.
 
 ---
 
-Note that we do not *need* cycles to define `retractions`. We could just use `input` just as in the first experiment and let retractions be defined by
-```rust
-let retractions = input.concat(&results.negate());
-```
-This is exactly the collection of `retractions` that we use.
-
-However, we aren't doing all of this work because `retractions` is inherently interesting. We are doing it so that we can re-define the input to the `reduce` operator, in a way that ends up being recursive.
+You might worry that this could create cycles in collection definition, but the important point is that the definitions are still acyclic when we look at the pair of `(collection, time)`. Although collections can depend on themselves, they can only depend on their contents at strictly prior times. If you evaluate the settings of each collection at each time but going in order of times, and within each time in the dataflow order, you find all of the collection contents available to you and can evaluate each collection's contents.
 
 ---
 
@@ -212,7 +238,7 @@ Let's talk through an example. Imagine we have an `input` collection with these 
 ((key, data2), time2, +1)
 ((key, data3), time3, +1)
 ```
-We already know what the output of the `reduce` *should* look like, imagining that the `data` advance in time too:
+We already know what we *want* the output of the `reduce` to look like, imagining that the `data` advance in time too:
 ```
 ((key, data1), time1, +1)
 ((key, data1), time2, -1)
@@ -220,22 +246,22 @@ We already know what the output of the `reduce` *should* look like, imagining th
 ((key, data2), time3, -1)
 ((key, data3), time3, +1)
 ```
-However, we don't actually know that this is what the `reduce` does produce, because it depends on its own definition. Instead, we need to start to fill out known values of `retractions` time by time.
+However, we don't actually know that this is what the `reduce` *does* produce, because it depends on its own definition. Instead, we need to start to fill out known values of `retractions` time by time.
 
-At `time1`, retractions should be the input minus the ouput, which should be empty.
+At `time1`, `retractions` should be the input minus the ouput, which should be empty.
 ```
--- from input
+// from input
 ((key, data1), time1, +1)
--- from negative output
+// from negative output
 ((key, data1), time1, -1)
 ```
 
 At `time2`, the input has changed and the output has changed. We still subtract the two, meaning that the updates in `retractions` should be
 ```
--- from input
+// from input
 ((key, data1), time1, +1)
 ((key, data2), time2, +1)
--- from negative output
+// from negative output
 ((key, data1), time1, -1)
 ((key, data1), time2, +1)
 ((key, data2), time2, -1)
@@ -244,17 +270,18 @@ A bit of simplification, and this reduces down to
 ```
 ((key, data1), time2, +1)
 ```
-This is important, because for the first time this will influence the `reduce`. We'll pretend that the delay was set so that it happens before `time3`.
+This makes sense, because now with `data2` we are comfortable removing `data1` from the input.
+This is important, because for the first time this will influence the `reduce`. We'll pretend that `delay` is set so that it happens before `time3`, but the results should be correct in any case.
 
-At `time2 + delay` the input to the `reduce` changes, retracting `data1`. This should not result in an output change, and nothing else happens downstream. If this *did* result in an output change we would have some crazy dynamics to work out, and we are strongly relying on this not happening to stay sane. It results from our unstated assumptions about idempotence in the operator.
+At `time2 + delay` the input to the `reduce` changes, retracting `data1`. This does not result in an output change, and nothing else happens downstream. If this *did* result in an output change we would have some crazy dynamics to work out, and we are strongly relying on this not happening to stay sane. It results from our unstated assumptions about "idempotence" (something stronger, it seems) in the operator.
 
 At `time3`, the input changes again, which results in a change to the input of and then output of the `reduce`, as indicated up above. Those changes both come together in `retractions`, which now contains
 ```
--- from input
+// from input
 ((key, data1), time1, +1)
 ((key, data2), time2, +1)
 ((key, data3), time3, +1)
--- from negative output
+// from negative output
 ((key, data1), time1, -1)
 ((key, data1), time2, +1)
 ((key, data2), time2, -1)
@@ -266,7 +293,7 @@ A bit of simplification again and this reduces down to
 ((key, data1), time2, +1)
 ((key, data2), time3, +1)
 ```
-These go around again, and `delay` units after it was dethroned we should delete `data2` from the input.
+Again this makes sense, as we are permitted to retract `data2` as of `time3`. These go around again, and `delay` units after it was dethroned we should delete `data2` from the input.
 
 ---
 
@@ -276,13 +303,13 @@ It may take a while to wrap your head around what a `Variable` is and how it wor
 
 There was that `delay_ns` thing that we pretty casually skipped over. What was that about?
 
-When we construct a `Variable` we also create a promise to timely dataflow that our recirculated records will have their timestamps advanced by at least a certain amount. In this case, by some minimal `std::time::Duration`.
+When we construct a `Variable` we also create a promise to timely dataflow that our recirculated records will have their timestamps advanced by at least a certain strictly positive amount. In this case, by some minimal `std::time::Duration`.
 
 If we had tried to supply a zero value here, things would be a bit of a mess. If nothing else, there is no reason to believe that our variable is well-defined: it could depend on itself at its same time, and that is not ok. At least, that is not ok here in differential dataflow where we want things to be well-defined.
 
 But why choose it to be any particular positive value? Could we choose one nanosecond, or should we choose one hour?
 
-If you choose the delay to be small, you create a very tight feedback loop in the system. Each time the `reduce` operator is scheduled it asks itself "which times are ready to be acted upon?" If you've only put a nanosecond delay in place, the set of ready times is quite small: just a single nanosecond, because the outputs of this nanosecond can influence the inputs for the next nanosecond. As you increase the delay larger and larger chunks of time can be carved off and acted upon. With a one second delay, an entire second's worth of work can be peeled off and retired concurrently. Still larger delays allow more even temporal concurrency, which removes one blocker to throughput scaling.
+If you choose the delay to be small, you create a very tight feedback loop in the system. Each time the `reduce` operator is scheduled it asks itself "which times are ready to be acted upon?" If you've only put a nanosecond delay in place, the set of ready times is quite small: just a single nanosecond, because the *outputs* of this nanosecond can influence the *inputs* for the next nanosecond. As you increase the delay larger and larger chunks of time can be carved off and acted upon. With a one second delay, an entire second's worth of work can be peeled off and retired concurrently. Still larger delays allow more even temporal concurrency, which removes one blocker to throughput scaling.
 
 If you choose the delay to be large, however, a longer time passes before the updates take effect. With a one hour delay, it takes an hour before retractions are implemented, and the operator will continue to sit on and work with the last hour's worth of data. As you reduce the delay the working set decreases, and the time it takes to correctly handle new updates drops. With a one second delay the operator only maintains the last second of irrelevant updates, greatly reducing the amount of work and state required by the operator. Still shorter delays further reduce the costs associated with the historical data.
 
@@ -290,7 +317,7 @@ So you can see that there is a bit of a tension between these two. Also you can 
 
 ### Trying things out again
 
-Let's start with the debug build, aimed at one record each millisecond
+Let's start with the debug build, aimed at one input record each millisecond and a delay of one second:
 ```
 mcsherry@Echidnatron compaction % cargo run -- 1000000 1000000000
     Finished dev [unoptimized + debuginfo] target(s) in 0.05s
@@ -308,9 +335,9 @@ mcsherry@Echidnatron compaction %
 ```
 This is already substantially more stable than before.
 
-For the release build, it turns out that the 10x increased target throughput makes one second too large a delay. Specifically, with 10,000 records a second, this means that each of these updates need to scan roughly that many other updates, about 100 million units of work, and that doesn't end up finishing in a second; we've exceeded the system's capacity with this setting.
+For the release build, it turns out that the 10x increased target throughput makes one second too large a delay. Specifically, with 10,000 records a second, this means that each of these updates need to scan roughly that many other updates, about 100 million units of work each second, and that doesn't end up finishing in a second; we've exceeded the system's capacity with this setting.
 
-Turning it down to one millisecond works out much better:
+Turning `delay` down to one millisecond works out much better:
 ```
 mcsherry@Echidnatron compaction % cargo run --release -- 100000 1000000
     Finished release [optimized] target(s) in 0.04s
@@ -347,6 +374,8 @@ For example, in the NeXMark benchmark, which represents an auction site, auction
 
 As another example, we might decide to retain the top 10 most recent records, and delete all others. This allows us to retract some records (up to nine) and still get correct answers. The logic for keeping the top 10 is pretty simple, and less likely to get out of sync than a manual implementation.
 
+As a final example, we often see streams of pair `send` and `recv` statements, with some corresponding identifiers (e.g. a network flow and a sequence number). We may want to track the latency, which involves joining the two and subtracting some times. However, once both have landed, we can produce the latency and then subtract both from their inputs, keeping the working state of the dataflow down to the un-paired `send` and `recv` statements.
+
 #### Windows for retractions
 
 Although we discussed setting `delay` to optimize performance, another great use of it is to provide a window for retraction. Any record submitted will have `delay` time units until it is forcibly retracted from the input, which means that it remains visible even if it is not the current maximum. Should the current maximum abdicate, we can still see those values submitted within `delay`, and can recover to any of them.
@@ -358,5 +387,7 @@ I'm still pretty chuffed about how many things you can do without having to hand
 ### Wrapping up
 
 This was all meant to be a really quick introduction about how feedback in differential dataflow, by using `iterate::Variable`, can lead to some really interesting performance considerations. Patterns that might have been hard to express, or required custom operators, can be wired up with relatively simple declarative statements about which data are no longer relevant.
+
+In essence, we have been writing rules about how to re-write the input so that the incremental core of differential dataflow acts only on the minimal working set of data that you actually need. As that varies based on operators and use cases, you may need to roll your own rules here.
 
 And bonus, all of this is still deterministic, data-parallel dataflow. It makes sense and goes fast.
