--- a/posts/2020-06-09.md
+++ b/posts/2020-06-09.md
@@ -84,7 +84,7 @@ These traits both allow us to implement functionality for many types, but the bo
 
 ---
 
-Speaking of `map`, which applies a one-to-one transformation to records in an input stream... The `map` operator is an instance of [higher-order programming](https://en.wikipedia.org/wiki/Higher-order_programming), as in addition to its input stream argument it also requires a function describing the logic it should apply to each record. It's signature in Rust looks like
+Speaking of `map`, which applies a one-to-one transformation to records in an input stream... The `map` operator is an instance of [higher-order programming](https://en.wikipedia.org/wiki/Higher-order_programming), as in addition to its input stream argument it also requires a function describing the logic it should apply to each record. Its signature in Rust looks like
 
 ```rust
     fn map<D2, L>(&self, mut logic: L) -> Stream<S, D2>
