--- a/posts/2020-06-09.md
+++ b/posts/2020-06-09.md
@@ -161,7 +161,7 @@ The best analogy that I have seen is that shared and mutable borrows are the equ
 
 Borrowing is the way to access data without taking ownership. Borrows can be created by the owner of the data, and in some cases from borrows of other data (for example, if you borrow a tuple, you can create borrows to its members).
 
-For example, in contrast to the `map` method, the `filter` method retain records based on a predicate that can observe but not mutate the record. It's signature is
+For example, in contrast to the `map` method, the `filter` method retain records based on a predicate that can observe but not mutate the record. Its signature is
 ```rust
     fn filter<P>(&self, mut predicate: P) -> Stream<G, D>
     where
