--- a/posts/2020-06-06.md
+++ b/posts/2020-06-06.md
@@ -283,11 +283,11 @@ Before racing ahead, double check these inferences. We've already talked through
 
 #### RULE: Exclusions happen even with uncertainty!
 
-If we check out our hard puzzle, I've filled in our known locations, but I've also highlighted two locations that an experienced Sudoku artist would tell you each must be either four or five. The reasoning is, no other locations can be four of five in that box, and you do need to have both between them.
+If we check out our hard puzzle, I've filled in our known locations, but I've also highlighted two locations that an experienced Sudoku artist would tell you each must contain a four, as no other locations can be four in that box.
 
 ![SUDOKU](https://github.com/frankmcsherry/blog/blob/master/assets/sudoku/pic3.png)
 
-Now, we don't know which is which (and in fact, our program doesn't even know that they need to be four or five yet), but even without knowing which is which we can learn a thing. We don't know which location is which, but it's either four-five or five-four, and both configurations rule out fours and fives from the rest of the row.
+Now, we don't know which is the four, but even without knowing which is which we can learn a thing. We don't know which location is which, but both configurations rule out fours from the rest of the row.
 
 The more general form of the rule is that in any row, column, or box, if all of the possible locations for a value agree on excluding some triple, then that triple should be excluded, even without determining the location of the value. There is actually a fourth instance of this rule, that if all possible values in one location exclude some triple, we can exclude the triple without actually knowing the value at the location. This is what gives us our standard exclusion rules for determined locations.
 
