--- a/posts/2020-06-19.md
+++ b/posts/2020-06-19.md
@@ -1,6 +1,6 @@
 # Eventual Consistency isn't for Streaming
 
-## **DRAFT**
+This post is originally available at the [Materialize blog](https://materialize.io/eventual-consistency-isnt-for-streaming/).
 
 Streaming systems consume inputs and produce outputs asyncronously: the output of a system at any moment may not reflect all of the inputs seen so far. These systems provide various guarantees about how their outputs relate to their input. Among the weaker (but not unpopular) guarantees is [eventual consistency](https://en.wikipedia.org/wiki/Eventual_consistency). Informally, eventual consistency means if the input stops changing, the output will eventually arrive at the correct result.
 
@@ -228,12 +228,14 @@ let errors_a = histogram1a.concat(histogram2a.negate());
 let errors_b = histogram1b.concat(histogram3b.negate());
 let errors_c = histogram2c.concat(histogram3c.negate());
 ```
-We can attach monitors to each of the `error` streams and complain loudly if there is ever a single record present. Differential dataflow has a method [`assert_empty()`](https://docs.rs/differential-dataflow/0.11.0/differential_dataflow/collection/struct.Collection.html#method.assert_empty) that does exactly this.
+We can attach monitors to each of the `error` streams and complain loudly if there is ever a single record present. Differential dataflow has a method [`assert_empty()`](https://docs.rs/differential-dataflow/0.11.0/differential_dataflow/collection/struct.Collection.html#method.assert_empty) that does exactly this. If you run it on these `errors_*` collections it produces no such reports, as differential dataflow doesn't have even transient inconsistencies.
 
 ## Conclusions
 
-Eventual consistency may make some sense for key-value stores, but it doesn't seem to make much sense for computations that have low-latency requirements. If your stream processor only provides eventual consistency guarantees, you should have a very serious think about what you actual expect it to do for you.
+Eventual consistency may make some sense for key-value stores, but it doesn't seem to make much sense for *computations* that have *low-latency requirements*. If your stream processor only provides eventual consistency guarantees, you should have a very serious think about what you actual expect it to do for you.
 
 That being said, there are systems like [Noria](https://github.com/mit-pdos/noria) that target keyed look-ups for maintained views, for which you might reasonably expect updates to cease for the records that influence your query results. These systems may give surprising results for "analytic" queries, but if you aren't planning on doing that (or can absorb that complexity) then their consistency guarantees might be fine for you.
 
 Ultimately, consistency guarantees come down to how much the system is planning on guaranteeing for you, and how much additional work you'll need to do between it and your use case. At Materialize we're betting that most of you don't want to become consistency experts, and don't want surprisingly incorrect results.
+
+If you are interested in consistent SQL views of your continually changing data, [check out](https://materialize.io/download/) Materialize now, sign up below for stimulating recurring email content, check out [the documentation](https://materialize.io/docs/), or just rush over and grab a copy of [the code itself](https://github.com/MaterializeInc/materialize) from our repository and start trying it out!
